CHANGES
=======

master
------

0.5.0
-----
* Moved counters from sparts.sparts to sparts.counters
* Fix some bugs in DirectoryWatcherTask, counters
* Add an initService() hook to VService
* Added a hook to do per-thread Task-specific initialization, initTaskThread()
* `sparts.thrift.client` with ThriftClient helper to reduce synchronous thrift client boilerplate
* Basic python3 support, python2.6 support via `six` dependency.
* `sparts.ctx` module with common helpful context managers
* `sparts.thrift.compiler` with helpers to generate thrift on-the-fly
* Various unittest, documentation improvements
* Handle string args to sparts.tasks.twisted_command.CommandTask better

0.4.1
-----
* Fixed a major bug that prevents mixing tasks that have both samples and standard counters
* Fixed logspew in (thrift) NBServerTask shutdown
* Improved unittest usability and performance significantly

0.4.0
-----
* New tasks.twisted_command.CommandTask for executing and tailing commands in subprocesses
* Shutdown on unhandled exceptions in tasks, initialization
* Support for `required`, `choices` in option()s
* PeriodicTask (and subclasses) now handle thrown TryLater correctly
* Make TornadoTask (subclasses) implicitly DEP TornadoIOLoopTask
* initFromCLI() takes an optional `name` kwarg for using VService directly
* Support shutdown from other tasks
* bugfix in 'store_true' options always returning True even when False
* bugfix in TwistedReactorTask for failed worker processes: may interfere with signal handlers

0.3.1
-----
* Declarative heirarchical Counters and Samples support
* FB303 integration with sparts counters
* "name" is no longer required for declarative options
* Support global Task registry as an alternetive to VService subclassing
* Implement DEPS for VTask declarative dependencies
* Add blocking getValue(timeout=None) to PollerTask
* Minor logging improvements, new counter for TornadoHTTPTask
* bugfix in http_thrift demo