@@ -6,22 +6,22 @@
 #
 from sparts.vservice import VService
 from sparts.tasks.thrift import NBServerTask
-from sparts.tasks.fb303 import FB303ProcessorTask
+from sparts.tasks.fb303 import FB303HandlerTask
 from sparts.tasks.tornado import TornadoHTTPTask, TornadoIOLoopTask
 from sparts.tasks.tornado_thrift import TornadoThriftHandler
 
 NBServerTask.register()
 TornadoIOLoopTask.register()
-FB303ProcessorTask.register()
+FB303HandlerTask.register()
 
 
 class MyHTTPTask(TornadoHTTPTask):
-    DEPS = [FB303ProcessorTask]
+    DEPS = [FB303HandlerTask]
 
     def getApplicationConfig(self):
         return [
             ('/thrift', TornadoThriftHandler,
-                dict(processor=self.service.requireTask(FB303ProcessorTask))),
+                dict(processor=self.service.requireTask(FB303HandlerTask))),
         ]
 
 MyHTTPTask.register()
